--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM python:3.7.4
+FROM python:3.9.5
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -7,15 +7,6 @@ RUN apt-get update && \
     git \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-
-ENV ENTRYKIT_VERSION 0.4.0
-
-RUN wget https://github.com/progrium/entrykit/releases/download/v${ENTRYKIT_VERSION}/entrykit_${ENTRYKIT_VERSION}_Linux_x86_64.tgz \
-    && tar -xvzf entrykit_${ENTRYKIT_VERSION}_Linux_x86_64.tgz \
-    && rm entrykit_${ENTRYKIT_VERSION}_Linux_x86_64.tgz \
-    && mv entrykit /bin/entrykit \
-    && chmod +x /bin/entrykit \
-    && entrykit --symlink
 
 WORKDIR /app
 
@@ -27,6 +18,4 @@ RUN echo "if [[ -z \"\${VIRTUAL_ENV}\" ]]; then" >> /root/.bashrc && \
 
 COPY scripts/ /opt/bin/
 
-ENTRYPOINT [ \
-    "prehook", "/opt/bin/docker-setup.sh", "--", \
-    "/opt/bin/docker-entrypoint.sh"]
+ENTRYPOINT [ "/opt/bin/entrypoint.sh" ]
